<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_name">newChannel</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_button">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app">Load App - Current repository by Udacity</string>
    <string name="retrofit_button">Retrofit - type-safe HTTP client for Android and Java Square,Inc</string>
    <string name="header_image">header image</string>
    <string name="empty_selection_message">Please select file to download</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="load_app_channel_id">load_app_channel</string>
    <string name="check_status">Check the status</string>
</resources>
