<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_motion"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/details_scene"
    >


    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/ok"
        android:textAllCaps="true"
        />


    <RelativeLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/file_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:text="@string/file_name"
            />

        <TextView
            android:id="@+id/file_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/file_name_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="viewEnd"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            />


        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/file_name_value"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:text="@string/status"
            />

        <TextView
            android:id="@+id/status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/status_text"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/status_text"
            android:layout_below="@id/file_name_value"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="viewEnd"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            />

    </RelativeLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>